crates/core/tests/snapshots/setting_validate_test__setting_validate__unnamed_enum__supports_nested.snap
---
source: crates/core/tests/setting_validate_test.rs
expression: pretty(container.impl_partial_validate())
---
fn validate_with_path(
    &self,
    context: &Self::Context,
    finalizing: bool,
    path: schematic::Path,
) -> std::result::Result<(), Vec<schematic::ValidateError>> {
    use schematic::internal::*;
    let mut validate = ValidateManager::new(context, finalizing, path);
    match self {
        Self::A(pa) => {
            validate.check_variant("A", (pa), self, |v, d, c, f| func_ref(v, d, c, f));
            validate.nested_variant("A", 0usize, pa);
        }
        Self::B(pa) => {
            validate.check_variant("B", (pa), self, |v, d, c, f| func_ref(v, d, c, f));
            validate.nested_variant("B", 0usize, pa);
        }
        Self::C(pa) => {
            validate.check_variant("C", (pa), self, |v, d, c, f| func_ref(v, d, c, f));
            if let Some(pa) = pa {
                validate.nested_variant("C", 0usize, pa);
            }
        }
        Self::D(pa) => {
            validate.check_variant("D", (pa), self, |v, d, c, f| func_ref(v, d, c, f));
            validate.nested_variant("D", 0usize, pa);
        }
        Self::E(pa) => {
            validate.nested_variant("E", 0usize, pa);
        }
        Self::F(pa) => {
            validate.nested_variant("F", 0usize, pa);
        }
        _ => {}
    };
    if !validate.errors.is_empty() {
        return Err(validate.errors);
    }
    Ok(())
}
