crates/core/tests/snapshots/setting_validate_test__setting_validate__unnamed_enum__supports_nested_collections.snap
---
source: crates/core/tests/setting_validate_test.rs
expression: pretty(container.impl_partial_validate())
---
fn validate_with_path(
    &self,
    context: &Self::Context,
    finalizing: bool,
    path: schematic::Path,
) -> std::result::Result<(), Vec<schematic::ValidateError>> {
    use schematic::internal::*;
    let mut validate = ValidateManager::new(context, finalizing, path);
    match self {
        Self::A(pa) => {
            validate.check_variant("A", (pa), self, Box::new(func_ref));
            validate.nested_variant_list("A", 0usize, pa.iter());
        }
        Self::B(pa) => {
            validate.check_variant("B", (pa), self, Box::new(func_ref));
            validate.nested_variant_map("B", 0usize, pa.iter());
        }
        Self::C(pa) => {
            validate.check_variant("C", (pa), self, Box::new(func_ref));
            if let Some(pa) = pa {
                validate.nested_variant_list("C", 0usize, pa.iter());
            }
        }
        Self::D(pa) => {
            validate.nested_variant_list("D", 0usize, pa.iter());
        }
        Self::E(pa) => {
            validate.nested_variant_map("E", 0usize, pa.iter());
        }
        Self::F(pa) => {
            if let Some(pa) = pa {
                validate.nested_variant_list("F", 0usize, pa.iter());
            }
        }
        _ => {}
    };
    if !validate.errors.is_empty() {
        return Err(validate.errors);
    }
    Ok(())
}
