crates/core/tests/snapshots/setting_validate_test__setting_validate__unnamed_enum__supports_nested_wrappers.snap
---
source: crates/core/tests/setting_validate_test.rs
expression: pretty(container.impl_partial_validate())
---
fn validate_with_path(
    &self,
    context: &Self::Context,
    finalizing: bool,
    path: schematic::Path,
) -> std::result::Result<(), Vec<schematic::ValidateError>> {
    use schematic::internal::*;
    let mut validate = ValidateManager::new(context, finalizing, path);
    match self {
        Self::A(pa) => {
            validate.nested_variant("A", 0usize, pa);
        }
        Self::B(pa) => {
            if let Some(pa) = pa {
                validate.nested_variant("B", 0usize, pa);
            }
        }
        Self::C(pa) => {
            validate.nested_variant("C", 0usize, pa);
        }
        Self::D(pa) => {
            if let Some(pa) = pa {
                validate.nested_variant_list("D", 0usize, pa.iter());
            }
        }
        Self::E(pa) => {
            validate.nested_variant_list("E", 0usize, pa.iter());
        }
        _ => {}
    };
    if !validate.errors.is_empty() {
        return Err(validate.errors);
    }
    Ok(())
}
