crates/core/tests/snapshots/setting_validate_test__setting_validate__unnamed_enum__supports_standard.snap
---
source: crates/core/tests/setting_validate_test.rs
expression: pretty(container.impl_partial_validate())
---
fn validate_with_path(
    &self,
    context: &Self::Context,
    finalizing: bool,
    path: schematic::Path,
) -> std::result::Result<(), Vec<schematic::ValidateError>> {
    use schematic::internal::*;
    let mut validate = ValidateManager::new(context, finalizing, path);
    match self {
        Self::A(pa) => {
            validate.check("A", (pa), self, Box::new(func_ref));
        }
        Self::B(pa) => {
            validate.check("B", (pa), self, Box::new(func_ref));
        }
        Self::C(pa) => {
            validate.check("C", (pa), self, Box::new(func_ref));
        }
        Self::D(pa) => {
            validate.check("D", (pa), self, Box::new(func_ref));
        }
        Self::E(pa) => {
            validate.check("E", (pa), self, Box::new(func_ref));
        }
        _ => {}
    };
    if !validate.errors.is_empty() {
        return Err(validate.errors);
    }
    Ok(())
}
